# Gaudi

./: .clang-format  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING  Makefile  Makefile-cmake.mk  Makefile.cmt  NOREFLEX_TUNED_README.txt  RELEASE_NOTES  configure  lhcbproject.yml  project.info  ruff.toml  toolchain.cmake
Examples/: CMakeLists.txt  README.md
Examples/mylee/: CMakeLists.txt
Examples/rust/: CMakeLists.txt  README.md
Gaudi/: CMakeLists.txt  hscript.py
Gaudi/cmake/: _version.py.in
Gaudi/cmt/: requirements  version.cmt
Gaudi/doc/: release.notes
Gaudi/job/: Gaudi-ASan.supp  Gaudi-LSan.supp  Gaudi-TSan.supp  Gaudi-UBSan.supp
Gaudi/python/: Configurables.py
Gaudi/scripts/: gaudirun.bat  gaudirun.py
Gaudi/src/: main.cpp
GaudiAlg/: CMakeLists.txt  hscript.yml
GaudiAlg/GaudiAlg/: Algorithm_details.h  CheckForNaN.h  Consumer.h  EventCounter.h  Fill.h  FilterAlgorithm.h  FilterPredicate.h  FixTESPath.h  FunctionalDetails.h  FunctionalUtilities.h  GaudiAlg.h  GaudiAlgorithm.h  GaudiAtomicSequencer.h  GaudiCommon.h  GaudiCommonImp.h  GaudiHistoAlg.h  GaudiHistoID.h  GaudiHistoTool.h  GaudiHistos.h  GaudiHistos.icpp  GaudiHistos_1DFixedBinning.icpp  GaudiHistos_1DProfFixedBinning.icpp  GaudiHistos_1DProfVariableBinning.icpp  GaudiHistos_1DVariableBinning.icpp  GaudiHistos_2DFixedBinning.icpp  GaudiHistos_2DProfFixedBinning.icpp  GaudiHistos_2DProfVariableBinning.icpp  GaudiHistos_2DVariableBinning.icpp  GaudiHistos_3DFixedBinning.icpp  GaudiHistos_3DVariableBinning.icpp  GaudiSequencer.h  GaudiTool.h  GaudiTupleAlg.h  GaudiTupleTool.h  GaudiTuples.h  GaudiTuples.icpp  GetAlg.h  GetAlgs.h  GetData.h  HbookName.h  (+25 more)
GaudiAlg/cmt/: requirements
GaudiAlg/dict/: dictionary.h  selection.xml
GaudiAlg/doc/: GaudiAlg.tex  Html.cfg  LaTex.cfg  footer.html  header.html  lhcbnote.cls  patch_3134.html  release.notes
GaudiAud/: CMakeLists.txt  hscript.yml
GaudiAud/cmt/: requirements
GaudiAud/doc/: release.notes
GaudiAud/src/: AlgContextAuditor.cpp  AlgContextAuditor.h  AlgErrorAuditor.cpp  AlgErrorAuditor.h  AlgTimingAuditor.cpp  ChronoAuditor.cpp  ChronoAuditor.h  CommonAuditor.cpp  CommonAuditor.h  MemStatAuditor.cpp  MemStatAuditor.h  MemoryAuditor.cpp  MemoryAuditor.h  NameAuditor.cpp  NameAuditor.h  ProcStats.cpp  ProcStats.h
GaudiCUDA/: CMakeLists.txt
GaudiCUDA/options/: GPUAvalancheSchedulerSimpleTest.py
GaudiCUDA/src/: CUDADeviceArray.cpp  CUDADeviceArray.h  CUDAStream.cpp  GPUCruncher.cpp  GPUCruncher.cu  GPUCruncher.h
GaudiCommonSvc/: CMakeLists.txt  hscript.yml
GaudiCommonSvc/GaudiCommonSvc/: Annotation.h  Axis.h  Generic1D.h  Generic2D.h  Generic3D.h  H1D.h  H2D.h  H3D.h  HistogramSvc.h  HistogramUtility.h  P1D.h  P2D.h
GaudiCommonSvc/cmt/: requirements
GaudiCommonSvc/doc/: release.notes
GaudiCommonSvc/src/: AlgContextSvc.cpp  AlgContextSvc.h  AuditorSvc.cpp  AuditorSvc.h  ChronoStatSvc.cpp  ChronoStatSvc.h  CounterSvc.cpp  StatusCodeSvc.cpp  StatusCodeSvc.h
GaudiCoreSvc/: CMakeLists.txt  hscript.yml
GaudiCoreSvc/cmt/: requirements
GaudiCoreSvc/doc/: release.notes
GaudiCoreSvc/scripts/: gaudi_list_opts_typos  list_opts_typos
GaudiExamples/: CMakeLists.txt  hscript.py
GaudiExamples/Features/: CMakeLists.txt  README.md  event_timeout_check.py
GaudiExamples/GaudiExamples/: Collision.h  Counter.h  Event.h  MyTrack.h  MyVertex.h
GaudiExamples/TinyExperiment/: CMakeLists.txt
GaudiExamples/cmt/: requirements
GaudiExamples/doc/: intelprofiler.md  release.notes
GaudiExamples/home/: AIDATupleRead.ref  AIDATupleWrite.ref  Aida2Root.ref  Aida2Root.ref.win  Aida2Root.ref.winxp  Aida2RootEx.ref  AlgErrAud.ref  AlgSequencer.ref  AlgSequencer_pyopts.ref  AlgTools.ref  AlgTools2.ref  AlgTools_pyopts.ref  ColorMsg.ref  ColorMsg.ref.winxp  CounterEx.pyref  CounterEx.ref  CounterSvcAlg.ref  CounterSvcAlg.ref.win  CounterSvcAlg.ref.winxp  DataListener.ref  DataOnDemand.ref  ErrorLog.ref  ErrorLog.ref.win  ErrorLog.ref.winxp  ErrorLog_err.ref  ErrorLog_err.ref.win  ErrorLog_err.ref.winxp  EvtColRead.pyref  EvtColWrite.pyref  EvtColsEx_Prepare.ref  EvtColsEx_Read.ref  EvtColsEx_Write.ref  FastContainers.ref  GPython.ref  GaudiCommonTests.ref  GaudiMT.ref  HistoEx.pyref  HistoEx.pyref.slc4_ia32  HistoEx1.pyref  HistoEx2.pyref  (+54 more)
GaudiExamples/options/: AIDATupleRead.opts  AIDATupleWrite.opts  Aida2Root.opts  AlgErrAud.opts  AlgSequencer.opts  AlgSequencer.py  AlgSequencerCF.py  AlgTools.opts  AlgTools.py  AlgTools2.opts  AlgToolsClone.py  AsyncIncidents.py  Common.opts  ConfigurableUser.py  CounterAlg.py  CounterEx.opts  CounterNewEx.opts  CounterSvcAlg.opts  CustomAppFromOptions.py  DataListener.opts  DataOnDemand.py  Dlls.opts  ErrorLog.opts  EvtColsEx_Prepare.opts  EvtColsEx_Read.opts  EvtColsEx_Write.opts  ExtendedProperties.opts  ExtendedProperties.py  FastContainers.opts  FileMgrTest.opts  GPython.py  GSLTools.opts  GaudiCommonTests.opts  GaudiMT.opts  Histograms.opts  Histograms.py  HistogramsTiming.py  Histograms_c2.py  Histograms_with_global.py  History.opts  (+34 more)
GaudiExamples/python/: Aida2RootEx.py  ArrayProperties.py  ExtendedProperties2.py  HistoEx.py  HistoEx1.py  HistoEx2.py  HistoUtilsEx.py  StringKeyEx.py  TupleEx.py  (+2 more)
GaudiGSL/: CMakeLists.txt  hscript.yml
GaudiHive/: CMakeLists.txt
GaudiKernel/: CMakeLists.txt  hscript.py
GaudiMP/: CMakeLists.txt  hscript.py
GaudiMTTools/: CMakeLists.txt
GaudiMonitor/: CMakeLists.txt  hscript.yml
GaudiPartProp/: CMakeLists.txt  hscript.yml
GaudiPluginService/: CMakeLists.txt
GaudiPolicy/: CMakeLists.txt  hscript.py
GaudiPoolDb/: CMakeLists.txt
GaudiProfiling/: CMakeLists.txt  hscript.py
GaudiPython/: CMakeLists.txt  hscript.py
GaudiRelease/: CMakeLists.txt  hscript.yml  prepare_gaudi_release.py  svn_tag_release.py
GaudiSvc/: CMakeLists.txt  hscript.yml
GaudiTestSuite/: CMakeLists.txt
GaudiUtils/: CMakeLists.txt  hscript.yml
PartPropSvc/: CMakeLists.txt  hscript.yml
RootCnv/: CMakeLists.txt  hscript.py
RootHistCnv/: CMakeLists.txt  hscript.yml
(+4788 files in other folders)
